--- a/scss/slideshow.scss
+++ b/scss/slideshow.scss
@@ -4,7 +4,7 @@
 
 .slideshow__slides_simple-theme {
     position: relative;
-    height: 300px;
+    height: 400px;
     padding: 0px;
     margin: 0px;
     list-style-type: none;
@@ -19,9 +19,8 @@
     opacity: 0;
     z-index: 1;
     transition: opacity 1s;
-
     font-size: 40px;
-    padding: 40px;
+    // padding: 40px;
     box-sizing: border-box;
     background: #333;
     color: #fff;
